--- a/index.html
+++ b/index.html
@@ -127,13 +127,30 @@
         </div>
       </div>
       <ul class="features-list fl-container lst-reset">
-        <li class="features-item"><a href="#"></a><a href="#">Виртуальная реальность</a></li>
-        <li class="features-item"><a href="catalog.html"></a><a href="catalog.html">Моноподы
-для селфи</a></li>
-        <li class="features-item"><a href="#"></a><a href="#">Экшн-камеры</a></li>
-        <li class="features-item"><a href="#"></a><a href="#">Фитнес-браслеты</a></li>
-        <li class="features-item"><a href="#"></a><a href="#">Умные часы</a></li>
-        <li class="features-item"><a href="#"></a><a href="#">Квадрокоптеры</a></li>
+        <li class="features-item">
+          <a href="#"></a>
+          <a href="#">Виртуальная реальность</a>
+        </li>
+        <li class="features-item">
+          <a href="catalog.html"></a>
+          <a href="catalog.html">Моноподы для селфи</a>
+        </li>
+        <li class="features-item">
+          <a href="#"></a>
+          <a href="#">Экшн-камеры</a>
+        </li>
+        <li class="features-item">
+          <a href="#"></a>
+          <a href="#">Фитнес-браслеты</a>
+        </li>
+        <li class="features-item">
+          <a href="#"></a>
+          <a href="#">Умные часы</a>
+        </li>
+        <li class="features-item">
+          <a href="#"></a>
+          <a href="#">Квадрокоптеры</a>
+        </li>
       </ul>
     </main>
 
@@ -141,7 +158,7 @@
       <input name="benefits-control" class="benefits-control-1" type="radio" id="benefits-1" hidden checked>
       <input name="benefits-control" class="benefits-control-2" type="radio" id="benefits-2" hidden>
       <input name="benefits-control" class="benefits-control-3" type="radio" id="benefits-3" hidden>
-      <ul class="benefits lst-reset">
+      <ul class="benefits lst-reset fl-container fld-column">
         <li class="benefits-names">
           <label class="btn" for="benefits-1">
             Доставка
