--- a/index.html
+++ b/index.html
@@ -284,30 +284,35 @@
       </div>
     </footer>
 
-    <section class="map-popup" hidden>
+    <section class="map-popup">
       <h3 class="visually-hidden">Увеличенная карта</h3>
-      <img src="img/map-big.jpg" alt="Карта (увеличенная)" height="559" width="960">
+      <p>
+        <img src="img/map-big.jpg" alt="Карта (увеличенная)" height="559" width="960">
+      </p>
+      <button class="modal-close btn-reset" type="button">
+        <span class="visually-hidden">Закрыть</span>
+      </button>
     </section>
 
-    <section class="form-modal" hidden>
+    <section class="form-modal">
       <h3 class="visually-hidden">Форма обратной связи:</h3>
       <form action="https://echo.htmlacademy.ru" class="writeus-modal" method="post">
-        <ul>
-          <li>
+        <ul class="lst-reset fl-container form-modal-list flw-wrap">
+          <li class="form-modal-item">
             <label for="writeus-name">Ваше имя:</label>
             <input type="text" placeholder="Имя Фамилия" id="writeus-name" name="name">
           </li>
-          <li>
+          <li class="form-modal-item">
             <label for="writeus-email">Ваш e-mail:</label>
             <input type="email" id="writeus-email" placeholder="email@example.com" name="email">
           </li>
-          <li>
+          <li class="form-modal-item">
             <label for="writeus-textarea">Текст письма:</label>
             <textarea name="text" id="writeus-textarea" cols="80" rows="4" placeholder="В свободной форме"></textarea>
           </li>
         </ul>
-        <button type="submit" id="writeus-submit" class="write-us-submit button-reset">Отправить</button>
-        <button class="writeus-modal-close" type="button">
+        <button type="submit" id="writeus-submit" class="form-modal-submit btn-reset btn">Отправить</button>
+        <button class="modal-close btn-reset" type="button">
           <span class="visually-hidden">Закрыть</span>
         </button>
       </form>
